--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <main>
             <section id="bagian1">
-                <h2>Bagian 1</h2>
+                <h2>Pilihan Ganda</h2>
 
                 <div class="qa-card">
                     <div class="question"><span class="number">1.</span>
@@ -321,7 +321,7 @@
             </section>
 
             <section id="bagian2">
-                <h2>Bagian 2</h2>
+                <h2>ESSAY</h2>
 
                 <div class="qa-card">
                     <div class="question">
